tests/check_output.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/escrow/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/verification/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/vesting/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/payment_router/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/mnt-token/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/staking/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
    Checking mentorminds-escrow v0.1.0 (/home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/escrow)
    Checking mentorminds-reputation v0.1.0 (/home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/reputation)
    Checking mentorminds-governance v0.1.0 (/home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/governance)
    Checking mentorminds-integration-tests v0.1.0 (/home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/tests)
error[E0308]: mismatched types
   --> tests/interoperability/mocks.rs:85:96
    |
 85 | ...nv.invoke_contract(&escrow_addr, &soroban_sdk::Symbol::new(&env, "get_escrow_count"), ())
    |       --------------- arguments to this method are incorrect                             ^^ expected `Vec<Val>`, found `()`
    |
    = note: expected struct `soroban_sdk::Vec<soroban_sdk::Val>`
            found unit type `()`
note: method defined here
   --> /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/env.rs:370:12
    |
370 | ...fn invoke_contract<T>(
    |       ^^^^^^^^^^^^^^^

warning: unused variable: `amount`
  --> tests/interoperability/mocks.rs:71:44
   |
71 | ...s, amount: i...
   |       ^^^^^^ help: if this is intentional, prefix it with an underscore: `_amount`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `mentorminds-integration-tests` (lib) generated 1 warning
error: could not compile `mentorminds-integration-tests` (lib) due to 1 previous error; 1 warning emitted
